--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,7 +2,7 @@
     <div class="container-footer">
         <span>© {{ current_year if current_year else '2025' }} RhenCloud</span>
         <span>·</span>
-        <a href="https://github.com/RhenCloud/R2-Index" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://github.com/RhenCloud/Cloud-Index" target="_blank" rel="noopener">GitHub</a>
         <span>·</span>
         <a href="mailto:i@rhen.cloud">联系</a>
     </div>
