--- a/templates/index.html
+++ b/templates/index.html
@@ -59,10 +59,10 @@ current_prefix }}"{% endblock %} {% block content %}
                 <th class="checkbox-col">
                     <input type="checkbox" id="selectAll" aria-label="全选" />
                 </th>
-                <th>名称</th>
-                <th>大小</th>
-                <th>最后修改时间</th>
-                <th>操作</th>
+                <th class="file-name-col">名称</th>
+                <th class="file-size-col">大小</th>
+                <th class="last-modified-col">最后修改时间</th>
+                <th class="actions-col">操作</th>
             </tr>
         </thead>
         <tbody>
@@ -77,7 +77,7 @@ current_prefix }}"{% endblock %} {% block content %}
                         aria-label="选择 {{ entry.name }}"
                     />
                 </td>
-                <td>
+                <td class="file-name-col">
                     {% if entry.is_dir %}
                     <i class="file-icon folder fas fa-folder"></i>
                     <a href="/{{ entry.key.rstrip('/') }}">{{ entry.name }}</a>
@@ -86,54 +86,54 @@ current_prefix }}"{% endblock %} {% block content %}
                     <a href="{{ entry.file_url }}" target="_blank">{{ entry.name }}</a>
                     {% endif %}
                 </td>
-                <td class="file-size">
+                <td class="file-size-col file-size">
                     {% if not entry.is_dir %} {{ entry.size|filesizeformat }} {% else %} - {% endif %}
                 </td>
-                <td class="last-modified">
+                <td class="last-modified-col last-modified">
                     {% if not entry.is_dir %} {{ entry.last_modified }} {% else %} - {% endif %}
                 </td>
-                <td>
+                <td class="actions-col">
                     {% if entry.is_dir %}
                     <button
                         class="action-link rename-btn"
                         onclick="promptRename('{{ entry.key }}', '{{ entry.name }}', true)"
                     >
-                        <i class="fas fa-edit"></i> 重命名
+                        <i class="fas fa-edit"></i><span class="action-text"> 重命名</span>
                     </button>
                     <button class="action-link delete-btn" onclick="deleteFolder('{{ entry.key }}')">
-                        <i class="fas fa-trash"></i> 删除
+                        <i class="fas fa-trash"></i><span class="action-text"> 删除</span>
                     </button>
                     <button class="action-link copy-btn" onclick="promptCopyOrMove('{{ entry.key }}', true, 'copy')">
-                        <i class="fas fa-copy"></i> 复制
+                        <i class="fas fa-copy"></i><span class="action-text"> 复制</span>
                     </button>
                     <button class="action-link move-btn" onclick="promptCopyOrMove('{{ entry.key }}', true, 'move')">
-                        <i class="fas fa-arrows-alt-h"></i> 移动
+                        <i class="fas fa-arrows-alt-h"></i><span class="action-text"> 移动</span>
                     </button>
                     {% else %}
                     <button class="action-link" onclick="openPreview('{{ entry.file_url }}', '{{ entry.name }}')">
-                        <i class="fas fa-eye"></i> 预览
+                        <i class="fas fa-eye"></i><span class="action-text"> 预览</span>
                     </button>
                     <button
                         class="action-link download-btn"
                         data-download-key="{{ entry.key }}"
                         data-download-name="{{ entry.name }}"
                     >
-                        <i class="fas fa-download"></i> 下载
+                        <i class="fas fa-download"></i><span class="action-text"> 下载</span>
                     </button>
                     <button class="action-link delete-btn" onclick="deleteFile('{{ entry.key }}')">
-                        <i class="fas fa-trash"></i> 删除
+                        <i class="fas fa-trash"></i><span class="action-text"> 删除</span>
                     </button>
                     <button
                         class="action-link rename-btn"
                         onclick="promptRename('{{ entry.key }}', '{{ entry.name }}')"
                     >
-                        <i class="fas fa-edit"></i> 重命名
+                        <i class="fas fa-edit"></i><span class="action-text"> 重命名</span>
                     </button>
                     <button class="action-link copy-btn" onclick="promptCopyOrMove('{{ entry.key }}', false, 'copy')">
-                        <i class="fas fa-copy"></i> 复制
+                        <i class="fas fa-copy"></i><span class="action-text"> 复制</span>
                     </button>
                     <button class="action-link move-btn" onclick="promptCopyOrMove('{{ entry.key }}', false, 'move')">
-                        <i class="fas fa-arrows-alt-h"></i> 移动
+                        <i class="fas fa-arrows-alt-h"></i><span class="action-text"> 移动</span>
                     </button>
                     {% endif %}
                 </td>
