feat: 添加文件名列的点击事件，优化文件链接交互体验

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -291,8 +291,18 @@ h1 > div {
     background-color: var(--hover-bg);
 }
 
+.file-name-col {
+    cursor: pointer;
+    user-select: none;
+}
+
+.file-name-col:hover {
+    background-color: var(--hover-bg);
+}
+
 .file-icon {
     margin-right: 8px;
+    pointer-events: none;
 }
 
 .folder {
