--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,5 +5,7 @@
         <a href="https://github.com/RhenCloud/Cloud-Index" target="_blank" rel="noopener">GitHub</a>
         <span>·</span>
         <a href="mailto:i@rhen.cloud">联系</a>
+        <span>·</span>
+        <span style="color: var(--secondary-text)">v{{ app_version }}</span>
     </div>
 </footer>
